--- a/Builds/VisualStudio2022/resources.rc
+++ b/Builds/VisualStudio2022/resources.rc
@@ -9,17 +9,17 @@
 #include <windows.h>
 
 VS_VERSION_INFO VERSIONINFO
-FILEVERSION  1,0,0,0
+FILEVERSION  1,0,1,0
 BEGIN
   BLOCK "StringFileInfo"
   BEGIN
     BLOCK "040904E4"
     BEGIN
-      VALUE "CompanyName",  "Mitsuki\0"
+      VALUE "CompanyName",  "Kontate\0"
       VALUE "FileDescription",  "Quietone\0"
-      VALUE "FileVersion",  "1.0.0\0"
+      VALUE "FileVersion",  "1.0.1\0"
       VALUE "ProductName",  "Quietone\0"
-      VALUE "ProductVersion",  "1.0.0\0"
+      VALUE "ProductVersion",  "1.0.1\0"
     END
   END
 
